<resources>
    <string name="app_name">HomeWorkMD</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Search in the wikipedia</string>
    <string name="wiki_helper_text">Search for a term in wikipedia</string>
    <string name="favourite">favorite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="fb_description">FB description</string>
    <string name="_default">Default</string>
    <string name="entry">Entry</string>
    <string name="choice">Choice</string>
    <string name="action">Action</string>
    <string name="filter">Filter</string>
    <string name="background_color">Background Color</string>
    <string name="ripple_color">Ripple Color</string>
    <string name="chip_icon">Chip icon</string>
    <string name="chip">Chip</string>
    <string name="group">Group</string>
    <string name="one">One</string>
    <string name="choose_one">Choose One</string>
    <string name="choice_a">Choice A</string>
    <string name="choice_b">Choice B</string>
    <string name="choice_c">Choice C</string>
    <string name="in">in</string>
    <string name="single">single</string>
    <string name="line">line</string>
    <string name="add">add</string>
    <string name="_a">a</string>
    <string name="horizontal">horizontal</string>
    <string name="scroll">scroll</string>
    <string name="close_icon_listener">Close Icon Listener</string>
    <string name="two">Two</string>
    <string name="raised_button">Raised Button</string>
    <string name="unelevated_button">Unelevated Button</string>
    <string name="outlined_button">Outlined Button</string>
    <string name="text_button">Text Button</string>
    <string name="checkbox">Checkbox</string>
    <string name="radio_button">Radio Button</string>
    <string name="_switch">Switch</string>
    <string name="filled_box_text_field">Filled Box Text Field</string>
    <string name="text">Text</string>
    <string name="outlined_box_text_field">Outlined Box Text Field</string>
    <string name="card">Card</string>
    <string name="select_theme">Change app theme</string>
    <string name="default_theme">Default theme</string>
    <string name="indigo_theme">Indigo theme</string>
    <string name="pink_theme">Pink theme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="earth_tab_text">Earth</string>
    <string name="mars_tab_text">Mars</string>
    <string name="weather_tab_text">Solar system</string>
</resources>